--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,7 +11,7 @@ body {
 }
 
 header, footer {
-    background-color: #333;
+    background-color: #424242;
     color: white;
     text-align: center;
     padding: 0.5em 0;
@@ -36,9 +36,10 @@ main {
 
 .brand a {
     font-size: 1.5em;
-    color: rgb(87, 247, 47);
+    color: yellow;
     text-decoration: none;
     font-weight: bold;
+    /* color: rgb(87, 247, 47); */
 }
 
 .nav-links {
